# adns_server

./: .gitignore  DELEG.md  README.md  adns_server.py  adnsconfig.yaml  extension-design.txt  genkey.py  pylintrc  pyproject.toml  zonefile
specs/: cdoe-update-proposal.md  draft-ietf-deleg-10.txt  draft-ietf-dnsop-delext-07.txt  draft-ietf-dnsop-delext-08.txt
tests/pytest/: README.md  conftest.py  dnsutil.py  test_basic.py  test_deleg.py  test_edns.py  test_nsec3.py  test_zerox20.py
tests/pytest/test_zones/: test.yaml
tests/pytest/test_zones/deleg.test/: dnskey.txt  privkey.pem  zonefile
tests/pytest/test_zones/nsec3.test/: dnskey.txt  privkey.pem  zonefile
tests/pytest/test_zones/unsigned.test/: zonefile
