[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adns_server"
dynamic = ["version"]
license = "MIT"

authors = [
    { name = "Shumon Huque", email = "shuque@gmail.com" },
]
description = "Authoritative DNS server written in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography>=3.0",
    "dnspython>=2.5.0",
    "sortedcontainers",
    "pyyaml",
    "siphash",
    "cachetools",
]

[project.urls]
Homepage = "https://github.com/shuque/check_zone_dnssec"
Issues = "https://github.com/shuque/check_zone_dnssec/issues"

[tool.setuptools]
py-modules = []
script-files = ['adns_server.py']

[tool.setuptools.dynamic]
version = {attr = "adns_server.__version__"}
